<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_text">Поиск</string>
    <string name="media_text">Медиатека</string>
    <string name="settings_text">Настройки</string>
    <string name="dark_theme_text">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search_hint">Поиск</string>
    <string name="shareText">https://practicum.yandex.ru/android-developer</string>
    <string name="shareIntentTitle">Поделиться с помощью</string>
    <string name="userEmailAdress">mojo2009@yandex.ru</string>
    <string name="emailSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="emailText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreementUrl">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothingToFind">Ничего не нашлось</string>
    <string name="noInternetError">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="searched">Вы искали</string>
    <string name="deleteHistory">Очистить историю</string>
    <string name="playedTimeText">04:20</string>
    <string name="durationText">Длительность</string>
    <string name="albumText">Альбом</string>
    <string name="yearText">Год</string>
    <string name="styleText">Жанр</string>
    <string name="countryText">Страна</string>
</resources>