<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height_size">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_text"
            android:textSize="@dimen/primary_text_size"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="64dp"
            android:fontFamily="@font/yandex_display_medium"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/back_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:src="@drawable/ic_arrow"
            android:layout_marginStart="@dimen/main_padding"/>




    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme_text"
            android:layout_gravity="center_vertical|start"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size"
            android:fontFamily="@font/yandex_display_regular"
            android:layout_marginStart="@dimen/main_padding"/>

        <Switch
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="6dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:fontFamily="@font/yandex_display_regular"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="@dimen/main_padding"
            android:textSize="@dimen/settings_text_size"/>
        <ImageView
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_share"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_to_support"
            android:textColor="@color/black"
            android:fontFamily="@font/yandex_display_regular"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="@dimen/main_padding"
            android:textSize="@dimen/settings_text_size"/>
        <ImageView
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_support"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:fontFamily="@font/yandex_display_regular"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="@dimen/main_padding"
            android:textSize="@dimen/settings_text_size"/>

        <ImageView
            android:layout_width="@dimen/ic_size"
            android:layout_height="@dimen/ic_size"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_user_agreement"/>

    </FrameLayout>


</LinearLayout>