<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:theme="@style/NotMainScreen"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height_size">
        <TextView
            style="@style/panelHeaderText"
            android:layout_marginStart="64dp"
            android:text="@string/search_text"
            />

        <ImageView
            android:id="@+id/back_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/backButtonStyle"
            android:layout_gravity="center_vertical|start"
            android:src="@drawable/ic_arrow"
            android:layout_marginStart="@dimen/main_padding"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="@dimen/main_padding"
            style="@style/searchBar"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/inputEditText"
                style="@style/hintColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/search_text"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_text_size" />


            <ImageView
                android:layout_width="@dimen/main_padding"
                android:layout_height="@dimen/main_padding"
                android:src="@drawable/ic_search"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="12dp"
                style="@style/searchBarIcons"
                />
            
            <ImageView
                android:id="@+id/clearIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_clear_search"
                style="@style/searchBarIcons"
                android:visibility="gone"/>
        </FrameLayout>

    </FrameLayout>

    <ImageView
        android:id="@+id/placeholder_image_nothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/placeholderNothing"
        android:layout_marginTop="@dimen/placeholder_margin_top"
        android:layout_gravity="center"
        android:visibility="gone"
        />
    <ImageView
        android:id="@+id/placeholder_image_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/placeholderNoInternet"
        android:layout_marginTop="@dimen/placeholder_margin_top"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/placeholder_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/placeholderTextColor"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/main_padding"
        android:textSize="@dimen/settings_text_size"
        android:fontFamily="@font/yandex_display_medium"
        android:textAlignment="center"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/refresh"
        style="@style/refreshButton"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/yourSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/delete_history_top"
            android:text="@string/searched"
            android:fontFamily="@font/yandex_display_medium"
            android:textSize="@dimen/you_searched"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/recycler_view_top" />

        <Button
            android:id="@+id/deleteHistory"
            style="@style/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="@dimen/delete_history_top"
            android:text="@string/deleteHistory"
            android:visibility="gone"
            />
    </LinearLayout>


</LinearLayout>